examples/test/testpolicy6898.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6898
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key45: value48
      key40: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value36
          key16: value26
      podSelector:
        matchLabels:
          key42: value43
